<resources>
    <string name="app_name">TestWork</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_category">Select Category</string>
    <string name="phones">Phones</string>
    <string name="computer">Computer</string>
    <string name="health">Health</string>
    <string name="books">Books</string>
    <string name="text">Text</string>
    <string name="see_more">see more</string>
    <string name="_1_500"><strike>$1,500</strike></string>
    <string name="_100">$100</string>
    <string name="brand">Brand</string>
    <string name="galaxy_note_20_ultra">Galaxy Note 20 Ultra</string>
    <string name="_3000_00">$3000.00</string>
    <string name="add_address">Add address</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="_6_000_us">$6,000 us</string>
    <string name="free">Free</string>
    <string name="checkout">Checkout</string>
    <string name="product_details">Product Details</string>
    <string name="galaxy_note">Galaxy Note</string>
    <string name="filter_options">Filter options</string>
    <string name="done">Done</string>
    <string name="brandFilters">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="subtitle">SubTitle</string>
    <string name="buy_now">Buy now!</string>
    <string name="zihuatanejo_gro">Zihuatanejo, Gro</string>
    <string name="view_all">view all</string>
    <string name="search">Search</string>
    <string name="hot_sales">Hot sales</string>
    <string name="best_seller">Best Seller</string>
    <string name="model">Model</string>
    <string name="proccesor">Proccesor</string>
    <string name="camera">Camera</string>
    <string name="dimm">Dimm</string>
    <string name="ssd">Ssd</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="_1_500_00">1,500,00</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="_256_gb">256 GB</string>
    <string-array name="brand">
        <item>Samsung</item>
        <item>Iphone</item>
        <item>Xiaomi</item>
        <item>Huawei</item>
        <item>Nokia</item>
    </string-array>

    <string-array name="price">
        <item>$300 - $500</item>
        <item>$500 - $700</item>
        <item>$700 - $999</item>
    </string-array>

    <string-array name="size">
        <item>4.5 to 5.5 inches</item>
        <item>5.5 to 6.5 inches</item>
    </string-array>

</resources>