<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.cart.ThirdFragment">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_add_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/mark_pro"
        android:text="@string/add_address"
        android:textColor="@color/color_back_to_cart"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_back"
        app:layout_constraintEnd_toStartOf="@+id/iv_locale"
        app:layout_constraintTop_toTopOf="@+id/iv_back" />

    <ImageView
        android:id="@+id/iv_locale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:src="@drawable/ic_locale_cart"
        app:layout_constraintBottom_toBottomOf="@+id/iv_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_back" />

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/mark_pro"
        android:text="@string/my_cart"
        android:textColor="@color/color_back_to_cart"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/iv_back"
        app:layout_constraintTop_toBottomOf="@+id/iv_back" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/color_back_to_cart"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:itemCount="2"
            tools:listitem="@layout/card_cart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

            <View
                android:id="@+id/divider_top"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_back_to_cart_transperent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerview_cart" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mark_pro"
                android:text="@string/total"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/divider_top" />

            <TextView
                android:id="@+id/tv_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/mark_pro"
                android:text="@string/delivery"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/tv_total"
                app:layout_constraintTop_toBottomOf="@+id/tv_total" />


            <TextView
                android:id="@+id/tv_price_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/mark_pro"
                android:text="@string/_6_000_us"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_total"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_total" />

            <TextView
                android:id="@+id/tv_delivery_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mark_pro"
                android:text="@string/free"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_delivery"
                app:layout_constraintStart_toStartOf="@+id/tv_price_total"
                app:layout_constraintTop_toBottomOf="@+id/tv_total" />

            <View
                android:id="@+id/divider_bottom"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="26dp"
                android:background="@color/color_back_to_cart_transperent_two"
                app:layout_constraintTop_toBottomOf="@id/tv_delivery" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back_btn_checkout"
                android:fontFamily="@font/mark_pro"
                android:text="@string/checkout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/divider_bottom" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>